# libtooling-playground

./: CMakeLists.txt  README.md  cmake-config.sh
cmake/: cmake_create_symlink.cmake.in  cmake_uninstall.cmake.in
src/: CMakeLists.txt  main.cpp
